# dashboard

./: .gitignore
backend/: .env.example  pyproject.toml
backend/src/: main.py  settings.py
backend/src/auth/: entities.py  interfaces.py  router.py  service.py
backend/src/repositories/: interfaces.py  postgres.py
